Remove use of String.format()
Upgraded modernizer is flagging this as a violation: make sure we
migrate to String.formatted() or simple concatenations as appropriate.

Change-Id: I41008b78ea3ceb4ab5f8869e6b87a7bd4c548fdc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>